--- a/client/index.html
+++ b/client/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <meta property="og:image" content="https://infonex-agent-ai.onrender.com/assets/logo-Cq5xYOQH.webp">
+    <meta property="og:image" content="https://infonex-agent.onrender.com/assets/logo-Cq5xYOQH.webp">
 <meta property="og:site_name" content="InfonexAgent">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://infonex-agent-ai.onrender.com/">
+<meta property="og:url" content="https://infonex-agent.onrender.com/">
   <meta name="google-site-verification" content="M1LCDYcBeVDqms4WJyGM-LJPB6v3tCMoBA277P7LJBg" />
     <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "InfonexAgent",
-  "url": "https://infonex-agent-ai.onrender.com/",
-  "logo": "https://infonex-agent-ai.onrender.com/assets/logo-Cq5xYOQH.webp"
+  "url": "https://infonex-agent.onrender.com/",
+  "logo": "https://infonex-agent.onrender.com/assets/logo-Cq5xYOQH.webp"
 }
     </script>
   </head>
