--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
 <meta property="og:site_name" content="InfonexAgent">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://infonex-agent.onrender.com/">
+<meta name="keywords" content="InfonexAgent, Infonex Agent, infonexagent, infonex agent, InfonexAagent, infonexaagent, Infonex Agnet, infonex agnet, Info next agent, info next agent, InfoNex, infonex, Infonex AI, infonex ai, AI agent, ai agent, chatGPT alternative, chatgpt alternative, GPT4o chatbot, gpt4o chatbot, AI chatbot with image input, ai chatbot with image input, AI web search, ai web search, AI code generator, ai code generator, developer AI tool, developer ai tool, image to code, gpt-4o assistant, gpt 4o assistant, smart chatbot, coding AI assistant, coding ai assistant, AI with image and text input, ai with image and text input, no-code AI tool, no code ai tool, AI for developers, ai for developers, AI for students, ai for students, Infonex GPT, infonex gpt, Infonex app, infonex app, Infonex developer tool, infonex developer tool, Infonex web builder, infonex web builder, AI website builder, ai website builder, InfonexAgent chat, infonexagent chat, InfonexAgent GPT, infonexagent gpt">
   <meta name="google-site-verification" content="M1LCDYcBeVDqms4WJyGM-LJPB6v3tCMoBA277P7LJBg" />
     <script type="application/ld+json">
 {
