--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
   "url": "https://infonex-agent.onrender.com/",
   "logo": "https://infonex-agent.onrender.com/assets/logo-Cq5xYOQH.webp"
 }
+  <meta name="msvalidate.01" content="AF38E046D3FB7EC44916319DE388ED0B" />
     </script>
   </head>
   <body>
